force-app/main/default/objects/Market__c/fields/LY_Magazine_Section__c.field-meta.xml
<CustomField>
    <fullName>LY_Magazine_Section__c</fullName>
    <label>LY Magazine Section</label>
    <type>Url</type>
</CustomField>