force-app/main/default/objects/Market__c/fields/LY_Pre_Winners__c.field-meta.xml
<CustomField>
    <fullName>LY_Pre_Winners__c</fullName>
    <label>LY Pre-Winners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>