force-app/main/default/objects/Market__c/fields/LY_WSJ_Section__c.field-meta.xml
<CustomField>
    <fullName>LY_WSJ_Section__c</fullName>
    <description>Previous Year&apos;s WSJ Section</description>
    <inlineHelpText>Previous Year&apos;s WSJ Section</inlineHelpText>
    <label>LY WSJ Section</label>
    <type>Url</type>
</CustomField>