force-app/main/default/objects/Market__c/fields/LYS_URL_as_Text__c.field-meta.xml
<CustomField>
    <fullName>LYS_URL_as_Text__c</fullName>
    <label>LYS URL as Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>