force-app/main/default/objects/Market__c/fields/Magazine_Drop_Dead_Date__c.field-meta.xml
<CustomField>
    <fullName>Magazine_Drop_Dead_Date__c</fullName>
    <label>Magazine Drop Dead Date</label>
    <type>Date</type>
</CustomField>