force-app/main/default/objects/Market__c/fields/Magazine_Full_page_Price__c.field-meta.xml
<CustomField>
    <fullName>Magazine_Full_page_Price__c</fullName>
    <label>Magazine Full-page Price</label>
    <length>10</length>
    <type>Text</type>
</CustomField>