force-app/main/default/objects/Market__c/fields/Magazine_Readership__c.field-meta.xml
<CustomField>
    <fullName>Magazine_Readership__c</fullName>
    <label>Magazine Readership</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>