force-app/main/default/objects/Market__c/fields/Magazine_Text__c.field-meta.xml
<CustomField>
    <fullName>Magazine_Text__c</fullName>
    <inlineHelpText>This is the part of the name that should be italicized.  ie. CHICAGO magazine.</inlineHelpText>
    <label>Magazine Text</label>
    <length>75</length>
    <type>Text</type>
</CustomField>