force-app/main/default/objects/Market__c/fields/Magazine_Website__c.field-meta.xml
<CustomField>
    <fullName>Magazine_Website__c</fullName>
    <label>Magazine Website</label>
    <type>Url</type>
</CustomField>