force-app/main/default/objects/Market__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Geographic Area</description>
    <inlineHelpText>Geographic Area</inlineHelpText>
    <label>Market</label>
    <length>100</length>
    <type>Text</type>
</CustomField>