force-app/main/default/objects/Market__c/fields/Market_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Close_Date__c</fullName>
    <description>Pub date in numeric form (first of the month for monthly pub, date of publication for daily pub)</description>
    <inlineHelpText>Pub date in numeric form (first of the month for monthly pub, date of publication for daily pub)</inlineHelpText>
    <label>Market Close Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>