force-app/main/default/objects/Market__c/fields/Market_Day__c.field-meta.xml
<CustomField>
    <fullName>Market_Day__c</fullName>
    <formula>Today()- Market_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>