force-app/main/default/objects/Market__c/fields/Market_Days_Remaing__c.field-meta.xml
<CustomField>
    <fullName>Market_Days_Remaing__c</fullName>
    <formula>Market_Close_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Days Remaing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>