force-app/main/default/objects/Market__c/fields/Market_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Market_Disclosure__c</fullName>
    <description>Populate the disclosure on the digital spotlight award</description>
    <label>Market Disclosure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>