force-app/main/default/objects/Market__c/fields/Market_Firm_Review_Created__c.field-meta.xml
<CustomField>
    <fullName>Market_Firm_Review_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Market Firm Review Created</label>
    <type>Checkbox</type>
</CustomField>