force-app/main/default/objects/Market__c/fields/Market_Goal__c.field-meta.xml
<CustomField>
    <fullName>Market_Goal__c</fullName>
    <label>$ Market Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>