force-app/main/default/objects/Market__c/fields/Market_Notes__c.field-meta.xml
<CustomField>
    <fullName>Market_Notes__c</fullName>
    <description>Use this area to track things we need to know about a market (stuff like, we have changed partners 4 times, there’s a competitor program, this publisher distributes to prisons).</description>
    <inlineHelpText>Use this area to track things we need to know about a market (stuff like, we have changed partners 4 times, there’s a competitor program, this publisher distributes to prisons).</inlineHelpText>
    <label>Market Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>