force-app/main/default/objects/Market__c/fields/Market_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Market_Project_ID__c</fullName>
    <externalId>true</externalId>
    <label>Market Project ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>