force-app/main/default/objects/Market__c/fields/Market_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Project_Type__c</fullName>
    <label>Market Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Core Plus</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Mid Plus</fullName>
            </value>
            <value>
                <fullName>Alt Media</fullName>
            </value>
            <value>
                <fullName>MPS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>