force-app/main/default/objects/Market__c/fields/Market_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Start_Date__c</fullName>
    <label>Market Start Date</label>
    <type>Date</type>
</CustomField>