force-app/main/default/objects/Market__c/fields/Materials_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Materials_Due_Date__c</fullName>
    <defaultValue>&quot;Auto_Round_One__c&quot;</defaultValue>
    <label>Materials Due Date RETIRED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>