force-app/main/default/objects/Market__c/fields/Media_Partner__c.field-meta.xml
<CustomField>
    <fullName>Media_Partner__c</fullName>
    <description>Media Partner Salesforce URL</description>
    <inlineHelpText>Link to the correct media partner per market project.</inlineHelpText>
    <label>Media Partner</label>
    <type>Url</type>
</CustomField>