force-app/main/default/objects/Market__c/fields/MS_Certification_Link__c.field-meta.xml
<CustomField>
    <fullName>MS_Certification_Link__c</fullName>
    <label>MS Certification Link</label>
    <type>Url</type>
</CustomField>