force-app/main/default/objects/Market__c/fields/MS_Marketing_Link__c.field-meta.xml
<CustomField>
    <fullName>MS_Marketing_Link__c</fullName>
    <label>MS Marketing Link</label>
    <type>Url</type>
</CustomField>