force-app/main/default/objects/Market__c/fields/MS_Packages_Link__c.field-meta.xml
<CustomField>
    <fullName>MS_Packages_Link__c</fullName>
    <label>MS Packages Link</label>
    <type>Url</type>
</CustomField>