force-app/main/default/objects/Market__c/fields/MSSB_Award_Guide__c.field-meta.xml
<CustomField>
    <fullName>MSSB_Award_Guide__c</fullName>
    <label>MSSB Award Guide</label>
    <type>Url</type>
</CustomField>