force-app/main/default/objects/Market__c/fields/New_Final_Upload__c.field-meta.xml
<CustomField>
    <fullName>New_Final_Upload__c</fullName>
    <label>Final Upload</label>
    <type>Date</type>
</CustomField>