force-app/main/default/objects/Market__c/fields/New_Space_Reservation__c.field-meta.xml
<CustomField>
    <fullName>New_Space_Reservation__c</fullName>
    <label>Space Reservation</label>
    <type>Date</type>
</CustomField>