force-app/main/default/objects/Market__c/fields/of_10_yr_winners__c.field-meta.xml
<CustomField>
    <fullName>of_10_yr_winners__c</fullName>
    <label># of 10 yr winners</label>
    <length>10</length>
    <type>Text</type>
</CustomField>