force-app/main/default/objects/Market__c/fields/of_Pre_Winners__c.field-meta.xml
<CustomField>
    <fullName>of_Pre_Winners__c</fullName>
    <label># of Pre-Winners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>