force-app/main/default/objects/Market__c/fields/Override_Firm_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Firm_Review_Date__c</fullName>
    <description>To be left blank unless firm review date needs to be changed, enter new due date in this field.</description>
    <label>Override Firm Review Date</label>
    <type>Date</type>
</CustomField>