force-app/main/default/objects/Market__c/fields/Packages_Link__c.field-meta.xml
<CustomField>
    <fullName>Packages_Link__c</fullName>
    <inlineHelpText>This field contains the link to the award marketing dot charts</inlineHelpText>
    <label>Packages Link</label>
    <type>Url</type>
</CustomField>