force-app/main/default/objects/Market__c/fields/Pardot_Friendly_AG_Link__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Friendly_AG_Link__c</fullName>
    <label>Pardot Friendly AG Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>