force-app/main/default/objects/Market__c/fields/Partner_Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Partner_Logo_Url__c</fullName>
    <description>e.g. http://www.forbes.com. If Digital Spotlight contains a logo image for the Market and if this field is populated, this is the link that will be added to the Logo so if the user clicks it – it will open a new browser tab for the partner’s site.</description>
    <inlineHelpText>e.g. http://www.forbes.com. If Digital Spotlight contains a logo image for the Market and if this field is populated, this is the link that will be added to the Logo so if the user clicks it – it will open a new browser tab for the partner’s site.</inlineHelpText>
    <label>Partner Logo Url</label>
    <type>Url</type>
</CustomField>