force-app/main/default/objects/Market__c/fields/Peers_Surveyed__c.field-meta.xml
<CustomField>
    <fullName>Peers_Surveyed__c</fullName>
    <label>Peers Surveyed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>