force-app/main/default/objects/Market__c/fields/Percent_Candidates_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Percent_Candidates_Awarded__c</fullName>
    <description>Percent of candidates who won the award.</description>
    <inlineHelpText>Percent of candidates who won the award.</inlineHelpText>
    <label>Percent Candidates Awarded</label>
    <length>10</length>
    <type>Text</type>
</CustomField>