force-app/main/default/objects/Market__c/fields/Percent_of_Market_actual__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Market_actual__c</fullName>
    <description>Winners as a % of total professionals in market (actual). Have we hit the 7% yet?</description>
    <inlineHelpText>Winners as a % of total professionals in market (actual). Have we hit the 7% yet?</inlineHelpText>
    <label>Percent of Market (actual)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>