force-app/main/default/objects/Market__c/fields/Percent_to_RC_ACDF_Goal__c.field-meta.xml
<CustomField>
    <fullName>Percent_to_RC_ACDF_Goal__c</fullName>
    <formula>Actual_ACDF__c /  Research_Callers_ACDF_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent to RC ACDF Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>