force-app/main/default/objects/Market__c/fields/Percent_Winners_in_Market__c.field-meta.xml
<CustomField>
    <fullName>Percent_Winners_in_Market__c</fullName>
    <description>Winners as a % of total professionals in market (rounded). Have we hit the 7% yet?</description>
    <inlineHelpText>Winners as a % of total professionals in market (rounded). Have we hit the 7% yet?</inlineHelpText>
    <label>Percent Winners in Market (rounded)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>