force-app/main/default/objects/Market__c/fields/Period_1_End__c.field-meta.xml
<CustomField>
    <fullName>Period_1_End__c</fullName>
    <label>Period 1 End</label>
    <type>Date</type>
</CustomField>