force-app/main/default/objects/Market__c/fields/Period_1_Profile_Goal__c.field-meta.xml
<CustomField>
    <fullName>Period_1_Profile_Goal__c</fullName>
    <label>Period 1 Profile Goal</label>
    <summarizedField>Market_Goal__c.Period_1_Profile_Goal__c</summarizedField>
    <summaryForeignKey>Market_Goal__c.Market_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>