force-app/main/default/objects/Market__c/fields/Period_1_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_1_Start__c</fullName>
    <label>Period 1 Start</label>
    <type>Date</type>
</CustomField>