force-app/main/default/objects/Market__c/fields/Period_2_End__c.field-meta.xml
<CustomField>
    <fullName>Period_2_End__c</fullName>
    <label>Period 2 End</label>
    <type>Date</type>
</CustomField>