force-app/main/default/objects/Market__c/fields/Period_2_MPS_Goal__c.field-meta.xml
<CustomField>
    <fullName>Period_2_MPS_Goal__c</fullName>
    <label>Period 2 MPS Goal</label>
    <summarizedField>Market_Goal__c.Period_2_MPS_Goal__c</summarizedField>
    <summaryForeignKey>Market_Goal__c.Market_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>