force-app/main/default/objects/Market__c/fields/Period_2_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_2_Start__c</fullName>
    <label>Period 2 Start</label>
    <type>Date</type>
</CustomField>