force-app/main/default/objects/Market__c/fields/Period_3_End__c.field-meta.xml
<CustomField>
    <fullName>Period_3_End__c</fullName>
    <label>Period 3 End</label>
    <type>Date</type>
</CustomField>