force-app/main/default/objects/Market__c/fields/Period_3_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_3_Start__c</fullName>
    <label>Period 3 Start</label>
    <type>Date</type>
</CustomField>