force-app/main/default/objects/Market__c/fields/Pre_ACDF_Scoring_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_ACDF_Scoring_Date__c</fullName>
    <label>Pre-ACDF Scoring Date</label>
    <type>Date</type>
</CustomField>