force-app/main/default/objects/Market__c/fields/Pre_Winners_by_Years_Won__c.field-meta.xml
<CustomField>
    <fullName>Pre_Winners_by_Years_Won__c</fullName>
    <label>Pre-Winners by Years Won</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>