force-app/main/default/objects/Market__c/fields/Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Name__c</fullName>
    <description>Price Book Name Text Field</description>
    <formula>Price_Book__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Name</label>
    <type>Text</type>
</CustomField>