force-app/main/default/objects/Market__c/fields/Primary_Graphics__c.field-meta.xml
<CustomField>
    <fullName>Primary_Graphics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Graphics</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Markets1</relationshipName>
    <type>Lookup</type>
</CustomField>