force-app/main/default/objects/Market__c/fields/Primary_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Primary_Traffic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Traffic</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Markets</relationshipName>
    <type>Lookup</type>
</CustomField>