force-app/main/default/objects/Market__c/fields/Product_Overview_Ad_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Product_Overview_Ad_Guidelines__c</fullName>
    <inlineHelpText>This field contains the links to the marketing slides</inlineHelpText>
    <label>Marketing Link</label>
    <type>Url</type>
</CustomField>