force-app/main/default/objects/Market__c/fields/Product_Templates_Created__c.field-meta.xml
<CustomField>
    <fullName>Product_Templates_Created__c</fullName>
    <description>Date that product templates are created and ready for proofing.</description>
    <inlineHelpText>Date that product templates are created and ready for proofing.</inlineHelpText>
    <label>Product Templates Created</label>
    <type>Date</type>
</CustomField>