force-app/main/default/objects/Market__c/fields/Product_Templates_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Product_Templates_Finalized__c</fullName>
    <description>Date that market specific fulfillment product templates are created and finalized for a market. To be filled in ONLY after all are complete and finalized.</description>
    <inlineHelpText>Date that market specific fulfillment product templates are created and finalized for a market. To be filled in ONLY after all are complete and finalized.</inlineHelpText>
    <label>Product Templates Finalized</label>
    <type>Date</type>
</CustomField>