force-app/main/default/objects/Market__c/fields/Production_Days__c.field-meta.xml
<CustomField>
    <fullName>Production_Days__c</fullName>
    <description>Weekdays from Sales Close to Upload</description>
    <formula>(5 * ( FLOOR( ( New_Final_Upload__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( New_Final_Upload__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Sales_Close__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Sales_Close__c - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Weekdays from Sales Close to Upload</inlineHelpText>
    <label>Production Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>