force-app/main/default/objects/Market__c/fields/Production_Owner__c.field-meta.xml
<CustomField>
    <fullName>Production_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Markets5</relationshipName>
    <type>Lookup</type>
</CustomField>