force-app/main/default/objects/Market__c/fields/profession_singular__c.field-meta.xml
<CustomField>
    <fullName>profession_singular__c</fullName>
    <label>profession singular</label>
    <type>TextArea</type>
</CustomField>