force-app/main/default/objects/Market__c/fields/Professionals_in_Market__c.field-meta.xml
<CustomField>
    <fullName>Professionals_in_Market__c</fullName>
    <label>Professionals in Market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>