force-app/main/default/objects/Market__c/fields/Projected_Winners__c.field-meta.xml
<CustomField>
    <fullName>Projected_Winners__c</fullName>
    <label>Projected Winners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>