force-app/main/default/objects/Market__c/fields/Proof_Index__c.field-meta.xml
<CustomField>
    <fullName>Proof_Index__c</fullName>
    <label>Proof Index</label>
    <type>Date</type>
</CustomField>