force-app/main/default/objects/Market__c/fields/Proof_Round_1__c.field-meta.xml
<CustomField>
    <fullName>Proof_Round_1__c</fullName>
    <label>Proof Round 1</label>
    <type>Date</type>
</CustomField>