force-app/main/default/objects/Market__c/fields/Proof_Round_2__c.field-meta.xml
<CustomField>
    <fullName>Proof_Round_2__c</fullName>
    <label>Proof Round 2</label>
    <type>Date</type>
</CustomField>