force-app/main/default/objects/Market__c/fields/Publication_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Publication_Distribution__c</fullName>
    <description>Details of the publication distribution (can include information on readership, circulation, zip code distribution, etc.)</description>
    <inlineHelpText>Details of the publication distribution (can include information on readership, circulation, zip code distribution, etc.)</inlineHelpText>
    <label>Publication Distribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>