force-app/main/default/objects/Market__c/fields/Publication_Month__c.field-meta.xml
<CustomField>
    <fullName>Publication_Month__c</fullName>
    <label>Publication Month</label>
    <length>75</length>
    <type>Text</type>
</CustomField>