force-app/main/default/objects/Market__c/fields/Publication_Period__c.field-meta.xml
<CustomField>
    <fullName>Publication_Period__c</fullName>
    <label>Publication Period</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>