force-app/main/default/objects/Market__c/fields/Publication_Year__c.field-meta.xml
<CustomField>
    <fullName>Publication_Year__c</fullName>
    <description>ie. 2014</description>
    <inlineHelpText>ie. 2014</inlineHelpText>
    <label>Award Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>