force-app/main/default/objects/Market__c/fields/Publisher_Competition__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Competition__c</fullName>
    <description>Marketing uses this field to describe the publishing competitive landscape in the market</description>
    <inlineHelpText>Marketing uses this field to describe the publishing competitive landscape in the market</inlineHelpText>
    <label>Publisher Competition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>