force-app/main/default/objects/Market__c/fields/Purchased__c.field-meta.xml
<CustomField>
    <fullName>Purchased__c</fullName>
    <formula>Purchases__c / Total_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>