force-app/main/default/objects/Market__c/fields/Related_Media_Partner__c.field-meta.xml
<CustomField>
    <fullName>Related_Media_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field to the related media partner object</description>
    <inlineHelpText>This is a lookup field to the related media partner object</inlineHelpText>
    <label>Related Media Partner</label>
    <referenceTo>Media_Partner__c</referenceTo>
    <relationshipLabel>Markets</relationshipLabel>
    <relationshipName>Markets</relationshipName>
    <type>Lookup</type>
</CustomField>