force-app/main/default/objects/Market__c/fields/Research_Callers_ACDF_Goal__c.field-meta.xml
<CustomField>
    <fullName>Research_Callers_ACDF_Goal__c</fullName>
    <label>Research Callers ACDF Goal</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>