force-app/main/default/objects/Market__c/fields/Research_Close__c.field-meta.xml
<CustomField>
    <fullName>Research_Close__c</fullName>
    <label>Research Close</label>
    <type>Date</type>
</CustomField>