force-app/main/default/objects/Market__c/fields/Research_Form_URL_3__c.field-meta.xml
<CustomField>
    <fullName>Research_Form_URL_3__c</fullName>
    <label>Research Form URL 3</label>
    <type>Url</type>
</CustomField>