force-app/main/default/objects/Market__c/fields/Research_Geographic_Area_Covered__c.field-meta.xml
<CustomField>
    <fullName>Research_Geographic_Area_Covered__c</fullName>
    <label>Research Geographic Area Covered</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>