force-app/main/default/objects/Market__c/fields/Research_Market_Notes__c.field-meta.xml
<CustomField>
    <fullName>Research_Market_Notes__c</fullName>
    <description>Notes from Research pre-candidate through ACDF close.</description>
    <label>Research Market Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>