force-app/main/default/objects/Market__c/fields/Research_Stats_to_Ad_Prod__c.field-meta.xml
<CustomField>
    <fullName>Research_Stats_to_Ad_Prod__c</fullName>
    <formula>Sales_Close__c+4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Stats to Ad Prod</label>
    <type>Date</type>
</CustomField>