force-app/main/default/objects/Market__c/fields/RHB_End__c.field-meta.xml
<CustomField>
    <fullName>RHB_End__c</fullName>
    <label>RHB End</label>
    <type>Date</type>
</CustomField>