force-app/main/default/objects/Market__c/fields/RHB_Months_Surveyed__c.field-meta.xml
<CustomField>
    <fullName>RHB_Months_Surveyed__c</fullName>
    <description>Number of months of recent homebuyers surveyed.</description>
    <inlineHelpText>How many months&apos; worth of recent homebuyers were survyed?</inlineHelpText>
    <label>RHB Months Surveyed</label>
    <length>150</length>
    <type>Text</type>
</CustomField>