force-app/main/default/objects/Market__c/fields/RHB_Start__c.field-meta.xml
<CustomField>
    <fullName>RHB_Start__c</fullName>
    <label>RHB Start</label>
    <type>Date</type>
</CustomField>