force-app/main/default/objects/Market__c/fields/RHB_Survey_Home_Value__c.field-meta.xml
<CustomField>
    <fullName>RHB_Survey_Home_Value__c</fullName>
    <description>From the Market Stats. Home Values over this amount were surveyed.</description>
    <inlineHelpText>From the Market Stats. Home Values over this amount were surveyed.</inlineHelpText>
    <label>RHB Survey Home Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>